# ourcloud

./: README.md  com.evokzh.ourcloud.json  database.db  meson.build
data/: com.evokzh.ourcloud.desktop.in  com.evokzh.ourcloud.gschema.xml  com.evokzh.ourcloud.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
server/: client  database.db  index.php  message.php  profile.bk  profile.php  register.php  reset-password.php  server  server.bk
src/: main.py  meson.build  messages.py  ourcloud.gresource.xml  ourcloud.in  pref.ui  preferences.py  window.py  window.ui
src/blp/: pref.blp
src/gtk/: messages.ui  window.ui
